gccida/c1/tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/tree_cons/src/tree.c:1781:12: error: expected expression
*( _OWORD *)&result->common.chain = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/tree_cons/src/tree.c:1781:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->common.chain = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/tree_cons/src/obj/tree.o] Error 1
